--- a/src/index.html
+++ b/src/index.html
@@ -15,18 +15,17 @@
 			<div class="live__wrapper">
 				<!--<h1>Какой процент жизни ты потратил на ЭТО?</h1>-->
 				<div class="live__form" action="#" id="form_for_live">
-					<label for="title">На ЧТО ты потратил свою жизнь?</label>
-					<input id="title" type="text" placeholder="Введите значение" />
+					<label for="title">На ЧТО ты потратил(ла) свою жизнь?</label>
+					<input id="title" type="text" placeholder="Введите название" />
 
 					<label for="house">Сколько часов?</label>
-					<input id="house" type="number" placeholder="Введите значение" />
+					<input id="house" type="number" placeholder="Введите кол. часов" />
 
 					<label for="age">Твоя дата рождения?</label>
 					<input id="age" type="date" />
-
 				</div>
 				<div class="live__res">
-					<span>ответ:</span> </br>
+					<!--<span>ответ:</span> </br>-->
 					<span class="result">123</span>
 				</div>
 			</div>
