--- a/src/index.html
+++ b/src/index.html
@@ -17,26 +17,42 @@
 				<div class="helper__wrapper2">
 					<div class="helper__item">
 						<label for="yearsToHours">Полные годы в часы</label>
-						<input id="yearsToHours" type="number" />
-						<div class="helper__result helper__yearsToHours">___часов</div>
+						<input
+							id="yearsToHours"
+							type="number"
+							placeholder="Введите кол-во лет"
+						/>
+						<div class="helper__result helper__yearsToHours">Это 0 часов</div>
 					</div>
 
 					<div class="helper__item">
 						<label for="monthsToHours">Полные месяцы в часы</label>
-						<input id="monthsToHours" type="number" />
-						<div class="helper__result helper__monthsToHours">___часов</div>
+						<input
+							id="monthsToHours"
+							type="number"
+							placeholder="Введите кол-во месяцев"
+						/>
+						<div class="helper__result helper__monthsToHours">Это 0 часов</div>
 					</div>
 
 					<div class="helper__item">
 						<label for="weeksToHours">Полные недели в часы</label>
-						<input id="weeksToHours" type="number" />
-						<div class="helper__result helper__weeksToHours">___часов</div>
+						<input
+							id="weeksToHours"
+							type="number"
+							placeholder="Введите кол-во недель"
+						/>
+						<div class="helper__result helper__weeksToHours">Это 0 часов</div>
 					</div>
 
 					<div class="helper__item">
 						<label for="daysToHours">Полные дни в часы</label>
-						<input id="daysToHours" type="number" />
-						<div class="helper__result helper__daysToHours">___часов</div>
+						<input
+							id="daysToHours"
+							type="number"
+							placeholder="Введите кол-во дней"
+						/>
+						<div class="helper__result helper__daysToHours">Это 0 часов</div>
 					</div>
 				</div>
 			</div>
