--- a/src/index.html
+++ b/src/index.html
@@ -64,7 +64,12 @@
 			<div class="live__wrapper">
 				<div class="live__form" action="#" id="form_for_live">
 					<label for="title">На ЧТО ты потратил(ла) свою жизнь?</label>
-					<input id="title" type="text" placeholder="Введите название" />
+					<input
+						id="title"
+						type="text"
+						maxlength="20"
+						placeholder="Введите название"
+					/>
 
 					<label for="house">Сколько часов?</label>
 					<input id="house" type="number" placeholder="Введите кол. часов" />
