--- a/src/index.html
+++ b/src/index.html
@@ -77,12 +77,21 @@
 					<label for="age">Твоя дата рождения?</label>
 					<input id="age" type="date" />
 				</div>
+				<div class="diagramma">
+					<canvas
+						class="myChart"
+						id="myChart"
+						width="100px"
+						height="100px"
+					></canvas>
+				</div>
 				<div class="live__res">
 					<span class="result"></span>
 				</div>
 			</div>
 		</section>
 
+		<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 		<script src="./js/script.js"></script>
 	</body>
 </html>
