--- a/src/index.html
+++ b/src/index.html
@@ -77,14 +77,7 @@
 					<label for="age">Твоя дата рождения?</label>
 					<input id="age" type="date" />
 				</div>
-				<div class="diagramma">
-					<canvas
-						class="myChart"
-						id="myChart"
-						width="100px"
-						height="100px"
-					></canvas>
-				</div>
+				<div class="chart"></div>
 				<div class="live__res">
 					<span class="result"></span>
 				</div>
