--- a/src/index.html
+++ b/src/index.html
@@ -57,7 +57,7 @@
 				</div>
 			</div>
 			<div class="helper__result helper__result-allHouse">
-				Колличество получившихся часов: <span>result</span>
+				<span>result</span>
 			</div>
 		</section>
 		<section class="live">
